--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.1",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.9",
     "@angular/material": "^11.2.1",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "angular-google-charts": "^2.0.1",
     "arrive": "^2.4.1",
     "bootstrap": "^4.6.0",
     "bootstrap-material-design": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "chartist": "^0.11.4",
+    "firebase": "^7.0 || ^8.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ngx-order-pipe": "^2.1.1",
@@ -52,6 +56,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
